<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">Prepaid telephone manager app and widget. Remember to add the widget to the home screen!!\n\nDeveloped by Stefanos Togoulidis\n\nhttp://hypest.org/PrepaidTextAPI"</string>
    <string name="app_name">PrepaidTextAPI</string>
    <string name="auto_update_in_progress">Auto update in progress&#8230;</string>
    <string name="button_send">Send</string>
    <string name="button_back">Back</string>
    <string name="consume_all">org.hypest.prepaidtextapi.pref.consume_all</string>
    <string name="force_refresh">Force refresh</string>
    <string name="force_smsc">org.hypest.prepaidtextapi.pref.force_smsc</string>
    <string name="info">Information</string>
    <string name="launch_update">org.hypest.prepaidtextapi.pref.launch_update</string>
    <string name="long_click_to_refresh">Long click to refresh</string>
    <string name="network_offline"></string>
    <string name="network_offline_info">No network coverage at the moment. Please try again later&#8230;</string>
    <string name="network_foreign">It appears that you\'re on a foreign network. The SMS sending may cost you money and the SMS responses may not even arrive to you!</string>
    <string name="new_message_received">New message received&#8230;</string>
    <string name="never">Never</string>
    <string name="notification">org.hypest.prepaidtextapi.pref.notification</string>
    <string name="on_call_end">org.hypest.prepaidtextapi.pref.on_call_end</string>
    <string name="operator_WindHellas">20210</string>
    <string name="operator_VodafoneGR">20205</string>
    <string name="operator_CosmoteGR">20201</string>
    <string name="operator_Emulator">310260</string>
    <string name="placeholder_balance_title">Balance</string>
    <string name="placeholder_balance_value">999,99€</string>
    <string name="placeholder_rest_sms">Various</string>
    <string name="placeholder_rest_sms_info">Small text</string>
    <string name="placeholder_email_client_item">TopText</string>
    <string name="placeholder_extra_sms_body">Extra SMS body!</string>
    <string name="pref_hiding_summary">Select when to hide pending the responses</string>
    <string name="pref_hiding_title">Hiding responses</string>
    <string name="placeholder_last_updated_at">Updated: 22/11/2011 15:25:18 PM</string>
    <string name="refresh_now">Refresh now</string>
    <string name="report">Report</string>
    <string name="report_to_developer">Report to developer</string>
    <string name="report_to_developer_explain">Selected SMS will be sent to the app developer for analysis</string>
    <string name="report_wifi_only">org.hypest.prepaidtextapi.pref.report_wifi_only</string>
    <string name="response_hiding">org.hypest.prepaidtextapi.pref.response_hiding</string>
    <string name="renewal_title">Topup</string>
    <string name="renewal_info">Provide the topup code here&#8230;</string>
    <string name="refresh_finished">Refresh has finished&#8230;</string>
    <string name="sending_postponed">Sending postponed</string>
    <string name="sending_postponed_offline">Will be sent when online</string>
    <string name="sending_postponed_offline_info">No connectivity. The report will be sent when connectivity is restored</string>
    <string name="sending_postponed_no_background_data">Please enable background data</string>
    <string name="sending_postponed_no_background_data_info">Report will be send when you enable background data.</string>
    <string name="sending_postponed_cellular">Will report when on WiFi</string>
    <string name="sending_postponed_cellular_info">Report will be send when on WiFi or until you change the setting.</string>
    <string name="settings">Settings</string>
    <string name="sms_reporting">SMS reporting</string>
    <string name="sms_reporting_background">In progress in the background</string>
    <string name="sms_reporting_background_info">SMS reporting has started in the background</string>
    <string name="sms_reporting_succeeded">Report succeeded!</string>
    <string name="sms_reporting_succeeded_thanx">Thanks for participating!</string>
    <string name="sms_reporting_succeeded_thanx_info">Reporting succeeded! Thanks for participating!</string>
    <string name="sms_reporting_failed">Report failed</string>
    <string name="sms_reporting_failed_unknown">Failed. Reason unknown.</string>
    <string name="sms_reporting_failed_unknown_info">SMS reporting failed</string>
    <string name="topup">Topup</string>
    <string name="unknown">unknonwn</string>
    <string name="update">Update all</string>
    <string name="updated">Updated: </string>
    <string name="unknown_info">These SMSs are not recognized or not supported by the app</string>
    <string name="unread_sms">Unread SMS</string>
    <string name="unread_sms_info">You have unread SMS(s)</string>
    <string name="view_all">View all</string>
    <string name="various">Various</string>
    <string name="various_info">Various texts that come from the operator</string>
    <string name="warning">Warning!</string>

</resources>